# FluidSolvers

CovectorFluids/reference_code/: CMakeLists.txt  README.md
CovectorFluids/reference_code/modelData/: sigg_logo.txt
CovectorFluids/reference_code/modelData/DeltaWing/: DeltaWingSimpleSDF_128cubed.vdb  DeltaWingSimpleSDF_64cubed.vdb
CovectorFluids/reference_code/modelData/TrefoilKnot/: trefoilKnotDensityField_128cubed.vdb
CovectorFluids/reference_code/src/: CMakeLists.txt
CovectorFluids/reference_code/src/covector2D/: CMakeLists.txt  CovectorSolver2D.cpp  CovectorSolver2D.h  main.cpp
CovectorFluids/taichi_code/: CF_leapfrog.py  CF_main.py  CF_solver.py  CF_solver_old.py  CF_taylor.py  advection.py  mgpcg_poisson.py  mgpcg_solver.py  smoke_simulator.py  stable_fluid.py  test.py  upwind_main.py  upwind_solver.py
CovectorFluids/taichi_code/output/: Taylor4_24fps.mov  Taylor4_30fps.mov  TaylorVortex.mov  Taylor_24fps.mov  Taylor_CFMCM.mov  Taylor_SL.mov  leapfrog_60fps.mov  leapfrog_90fps.mov  leapfrog_CFMCM.mov  leapfrog_SL.mov
ISF/PyTorch/: leapfrog.py  simulator.py
ISF/Taichi/Math/: intoplation.py
ISF/Taichi/SchrodingerSmoke/: schrodinger_example.py  schrodinger_leap_frog.py  schrodinger_nozzle.py  schrodinger_simulator.py
ISF/Taichi/Simulation/: advection.py  fft_gpu.py  grid_simulator.py
ISF/Taichi/Visualization/: experiment_ui.py  visualization_setting.py
ISF/Taichi/output/: mnist.pdopt  mnist.pdparams
ISF/Taichi/test/: dft_test.py  eval_test.py  numpy_test.py  paddle_test.py  taichi_test.py
ISF/Taichi/utils/: macros.py  performance.py
(+17 files in other folders)
